--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Satellite Search</title>
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/cerulean/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/cerulean/bootstrap.min.css">
 </head>
 <body>
   <nav class="navbar navbar-default">
