--- a/home.html
+++ b/home.html
@@ -28,6 +28,10 @@
           </div>
           <button type="submit" class="btn btn-default">Search!</button>
         </form>
+        <div class="alert alert-warning alert-dismissible" role="alert">
+          Please Enter a city first!
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </div>
       </div>
       <div class="col-md-8">
         <div class="row" id="photosRow"></div>
@@ -35,6 +39,7 @@
     </div>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="scripts/photoSearch.js"></script>
 </body>
 </html>
